<resources>
    <string name="app_name">brightfish</string>
    <string name="title_activity_search">SearchActivity</string>
    <string-array name="tab_short_Title">
        <item>基本参数</item>
        <item>最近活动</item>
        <item>商家分析</item>
        <item>数据统计</item>
    </string-array>
    <string name="output">产出</string>
    <string name="consumption">消耗</string>
    <string name="lost">丢失</string>
    <string name="wear">磨损</string>
    <string name="reversion">修订错误</string>
    <string name="product">产品</string>
    <string name="material">原料</string>
    <string name="device">设备</string>
    <string name="service">服务</string>
    <string name="retail">零售</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">注册</string>
    <string name="prompt_register"><u>还未注册？</u></string>
    <string name="register_fail">注册失败</string>
    <string name="net_connect_fail">网络连接失败</string>
    <!--<string name="path">http://192.168.1.107:8084</string>-->
    <string name="path">http://192.168.137.1:8084</string>
    <string name="all_supplier"><u>所有供货商</u></string>
    <string name="all_buyer"><u>所有买家</u></string>


</resources>

