<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialogTitle"
        android:background="@color/colorOrange"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="选择类别"
            />

    </LinearLayout>
    <RadioGroup
        android:id="@+id/catas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >
        <RadioButton
            android:id="@+id/cata_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/btn_radio"
            android:button="@null"
            android:drawableTint="@color/colorOrange"
            android:text="@string/product"


            />
        <RadioButton
            android:id="@+id/cata_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/btn_radio"
            android:button="@null"
            android:drawableTint="@color/colorOrange"
            android:text="@string/material"

            />
        <RadioButton
            android:id="@+id/cata_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/btn_radio"
            android:button="@null"
            android:drawableTint="@color/colorOrange"
            android:text="@string/device"

            />
        <RadioButton
            android:id="@+id/cata_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/btn_radio"
            android:button="@null"
            android:drawableTint="@color/colorOrange"
            android:text="@string/service"
            />
        <RadioButton
            android:id="@+id/cata_retail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/btn_radio"
            android:button="@null"
            android:drawableTint="@color/colorOrange"
            android:text="@string/retail"
            android:checked="true"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >
        <Button
            android:id="@+id/cancle_cata"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="取消"
            android:textColor="@color/colorOrange"
            />
        <Button
            android:id="@+id/commit_cata"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="确定"
            android:textColor="@color/colorOrange"
            />

    </LinearLayout>

</LinearLayout>
